[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-range-ping-diff"
version = "0.1.0"
description = "Concurrent subnet ping scanner with asymmetric reachability reporting"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.82.0",
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
ip-range-ping-diff = "ip_range_ping_diff.__main__:main"

[tool.setuptools.packages.find]
include = ["ip_range_ping_diff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
